--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,16 @@
         <maven.compiler.source>1.13</maven.compiler.source>
         <maven.compiler.target>1.13</maven.compiler.target>
     </properties>
+    <plugins>
+        <plugin>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-maven-plugin</artifactId>
+            <version>0.0.4</version>
+            <configuration>
+                <mainClass>HelloFX</mainClass>
+            </configuration>
+        </plugin>
+    </plugins>
     <dependencies>
 
         <dependency>
@@ -26,7 +36,14 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>14</version>
+        </dependency>
+
 
 
     </dependencies>
+
 </project>
