--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>groupId</groupId>
-    <artifactId>Project_team-3</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <properties>
-        <maven.compiler.source>1.13</maven.compiler.source>
-        <maven.compiler.target>1.13</maven.compiler.target>
-    </properties>
+    <build>
     <plugins>
         <plugin>
             <groupId>org.openjfx</groupId>
@@ -21,6 +14,16 @@
             </configuration>
         </plugin>
     </plugins>
+
+    </build>
+    <groupId>groupId</groupId>
+    <artifactId>Project_team-3</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <properties>
+        <maven.compiler.source>1.13</maven.compiler.source>
+        <maven.compiler.target>1.13</maven.compiler.target>
+    </properties>
+
     <dependencies>
 
         <dependency>
@@ -42,6 +45,11 @@
             <version>14</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>14</version>
+        </dependency>
 
 
     </dependencies>
