--- a/pom.xml
+++ b/pom.xml
@@ -3,16 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <build>
-    <plugins>
-        <plugin>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-maven-plugin</artifactId>
-            <version>0.0.4</version>
-        </plugin>
-    </plugins>
 
-    </build>
     <groupId>groupId</groupId>
     <artifactId>Project_team-3</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -48,8 +39,19 @@
             <version>14</version>
         </dependency>
 
-
-
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>Main</mainClass>
+                </configuration>
+                <version>0.0.4</version>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
