--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
             <version>14</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.jfoenix</groupId>
+            <artifactId>jfoenix</artifactId>
+            <version>8.0.8</version>
+        </dependency>
+
     </dependencies>
 
     <build>
