--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,15 @@
             <artifactId>javafx-fxml</artifactId>
             <version>14</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.jetbrains.kotlin/kotlin-stdlib -->
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-stdlib</artifactId>
+            <version>1.3.50</version>
+        </dependency>
+
+
     </dependencies>
     <build>
         <plugins>
