--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,14 @@
             <version>1.3.50</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20200518</version>
+        </dependency>
+
+
 
     </dependencies>
     <build>
