some faetures addd to the project! plesae install apache tomcat 7.0.105!

--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,13 @@
             <artifactId>javafx-media</artifactId>
             <version>14</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/javax/javaee-api -->
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>8.0</version>
+            <scope>provided</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.openjfx</groupId>
@@ -66,6 +72,11 @@
     </dependencies>
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.4</version>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
