--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
     <groupId>Project</groupId>
     <artifactId>Main</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
@@ -35,13 +36,7 @@
             <artifactId>javafx-media</artifactId>
             <version>14</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/javax/javaee-api -->
-        <dependency>
-            <groupId>javax</groupId>
-            <artifactId>javaee-api</artifactId>
-            <version>8.0</version>
-            <scope>provided</scope>
-        </dependency>
+
 
         <dependency>
             <groupId>org.openjfx</groupId>
