--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,13 @@
             <version>1.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.8</version>
+        </dependency>
+
+
     </dependencies>
     <build>
         <plugins>
